wip(calendar): fix overflow left visual bug
See: https://share.clickup.com/t/h/ncxr74/OOLA2JA15TJO2G0

--- a/components/calendar/config.scss
+++ b/components/calendar/config.scss
@@ -1,7 +1,7 @@
 @use 'styles/sizes';
 
 $times-width: 40px;
-$cell-width: 100px;
+$cell-width: 120px;
 $border-color: var(--accents-2);
 $filters-height: 56px;
 
