--- a/components/calendar/weekly-display.module.scss
+++ b/components/calendar/weekly-display.module.scss
@@ -38,7 +38,7 @@
 }
 
 .headerWrapper {
-  @include calendar.header-wrapper(config.$times-width);
+  @include calendar.header-wrapper(config.$times-width, $border-left: true);
 }
 
 .headers {
